[package]
name = "l2tp-hub"
version = "0.0.1"
description = "A l2tp manager"
authors = ["Sentiago"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
keyring = { version = "3", features = ["apple-native", "windows-native"] }
open = "5.3.4"
rand = "0.8.6"
sha2 = "0.10.9"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tokio = "1.52.2"
aes-gcm = "0.10"
secrecy = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
