[package]
name = "l2tp-hub"
version = "0.3.0"
description = "A l2tp manager"
authors = ["Sentiago"]
edition = "2024"

[build-dependencies.tauri-build]
version = "2"
features = []

[dependencies]
serde_json = "1"
open = "5.3.4"
rand = "0.8.6"
sha2 = "0.10.9"
image = "0.25"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tokio = "1.52.2"
aes-gcm = "0.10"
secrecy = "0.8"

[dependencies.tauri]
version = "2"
features = ["tray-icon"]

[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.keyring]
version = "3"
features = [
    "apple-native",
    "windows-native",
]

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
